--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,13 +1,14 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=mysql-connector-java-5.1.35.jar;output=bin;
+application.title=ObsPatt
+application.vendor=Cristi
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=C:/Users/Cristi/Downloads/mysql-connector-java-5.1.35.jar;file=mysql-connector-java-5.1.35.jar;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1463573494781
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1463600581672
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=C:\\Workspace
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,15 +29,19 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Proiect_CTS.jar
+dist.jar=${dist.dir}/ObsPatt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.35.jar=mysql-connector-java-5.1.35.jar
-file.reference.Proiect_CTS-src=src
+file.reference.myrepo-src=src
+file.reference.mysql-connector-java-5.1.35.jar=C:\\Users\\Cristi\\Downloads\\mysql-connector-java-5.1.35.jar
+file.reference.mysql-connector-java-5.1.35.jar-1=mysql-connector-java-5.1.35.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.35.jar}
+    ${file.reference.mysql-connector-java-5.1.35.jar}:\
+    ${file.reference.mysql-connector-java-5.1.35.jar-1}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,4 +81,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.Proiect_CTS-src}
+src.dir=${file.reference.myrepo-src}
+src.New%20Folder.dir=src\\New Folder
